# audio-experiments

./: .gitignore  Cargo.toml  README.md  project.txtar
src/: audio.rs  buffer.rs  bus.rs  consts.rs  engine.rs  lib.rs  main.rs  source.rs  synth.rs  visualizer.rs
src/dissection/: buffer.rs  bus.rs  engine.rs  mod.rs  source.rs
src/dissection/effects/: mod.rs
src/dissection/pool/: handle.rs  mod.rs  multiborrow.rs
src/effects/: mod.rs
src/mess/: conversions.rs  delay.rs  fileio.rs  format.rs  melody.rs  mod.rs
src/pool/: handle.rs  mod.rs  multiborrow.rs
src/sources/: mod.rs
