[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["visualizer"]
visualizer = ["speedy2d"]

[dependencies]
dasp_ring_buffer = "0.11.0"
speedy2d = { git = "https://github.com/kirinokirino/Speedy2D", version = "1.10.0", optional = true, default-features = false, features = ["windowing-x11", "windowing"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
alsa-sys = "0.3.1"
libc = "0.2"
