[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
hound = "3.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
tinyaudio = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.98"
glam = "0.30.3"
